src/snapshots/blog__snapshot@2024__03__11__Rustup-1.27.0.html.snap
---
source: src/lib.rs
expression: content
input_file: site/2024/03/11/Rustup-1.27.0.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Announcing Rustup 1.27.0 | Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="Announcing Rustup 1.27.0 | Rust Blog">
     <meta name="twitter:description" content="Empowering everyone to build reliable and efficient software.">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="Announcing Rustup 1.27.0 | Rust Blog" />
    <meta property="og:description" content="Empowering everyone to build reliable and efficient software.">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../images/favicon.svg">
    <link rel="manifest" href="../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/feed.xml" title="Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="Announcing Rustup 1.27.0" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>Announcing Rustup 1.27.0</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Mar. 11, 2024 &middot; The Rustup Team
    
    </div>

    <div class="post">
      <p>The rustup team is happy to announce the release of rustup version 1.27.0.
<a href="https://rustup.rs">Rustup</a> is the recommended tool to install <a href="https://www.rust-lang.org">Rust</a>, a programming language that is empowering everyone to build reliable and efficient software.</p>
<p>If you have a previous version of rustup installed, getting rustup 1.27.0 is as easy as stopping any programs which may be using Rustup (e.g. closing your IDE) and running:</p>
<pre><code class="language-console">$ rustup self update
</code></pre>
<p>Rustup will also automatically update itself at the end of a normal toolchain update:</p>
<pre><code class="language-console">$ rustup update
</code></pre>
<p>If you don't have it already, you can <a href="https://rustup.rs">get rustup</a> from the appropriate page on our website.</p>
<h2><a href="#whats-new-in-rustup-1270" aria-hidden="true" class="anchor" id="whats-new-in-rustup-1270"></a>What's new in rustup 1.27.0</h2>
<p>This long-awaited Rustup release has gathered all the new features and fixes since April 2023. These changes include improvements in Rustup's maintainability, user experience, compatibility and documentation quality.</p>
<p>Also, it's worth mentioning that Dirkjan Ochtman (djc) and rami3l (rami3l) have joined the team and are coordinating this new release.</p>
<p>At the same time, we have granted Daniel Silverstone (kinnison) and <span lang=zh>二手掉包工程师</span> (hi-rustin) their well-deserved alumni status in this release cycle.
Kudos for your contributions over the years and your continuous guidance on maintaining the project!</p>
<p>The headlines for this release are:</p>
<ol>
<li>
<p>Basic support for the fish shell has been added.
If you're using <code>fish</code>, PATH configs for your Rustup installation will be added automatically from now on.</p>
<p><em>Please note that this will only take effect on installation, so if you have already installed Rustup on your machine, you will need to reinstall it.
For example, if you have installed Rustup via <a href="https://rustup.rs">rustup.rs</a>, simply follow <a href="https://rustup.rs">rustup.rs</a>'s instructions again;
if you have installed Rustup using <a href="https://rust-lang.github.io/rustup/installation/other.html">some other method</a>, you might want to reinstall it using that same method.</em></p>
</li>
<li>
<p>Rustup support for <code>loongarch64-unknown-linux-gnu</code> as a <em>host platform</em> has been added.
This means you should be able to install Rustup via <a href="https://rustup.rs">rustup.rs</a> and no longer have to rely on <a href="https://rust-lang.loongnix.cn">loongnix.cn</a> or self-compiled installations.</p>
<p><em>Please note that as of March 2024, <code>loongarch64-unknown-linux-gnu</code> is a <a href="https://doc.rust-lang.org/nightly/rustc/platform-support.html#tier-2-with-host-tools">&quot;tier 2 platform with host tools&quot;</a>, so Rustup is guaranteed to build for this platform.
According to Rust's <a href="https://doc.rust-lang.org/nightly/rustc/target-tier-policy.html">target tier policy</a>, this does not imply that these builds are also guaranteed to work, but they often work to quite a good degree and patches are always welcome!</em></p>
</li>
</ol>
<p>Full details are available in the <a href="https://github.com/rust-lang/rustup/blob/stable/CHANGELOG.md">changelog</a>!</p>
<p>Rustup's documentation is also available in <a href="https://rust-lang.github.io/rustup/">the rustup book</a>.</p>
<h2><a href="#thanks" aria-hidden="true" class="anchor" id="thanks"></a>Thanks</h2>
<p>Thanks again to all the contributors who made rustup 1.27.0 possible!</p>
<ul>
<li>Anthony Perkins (acperkins)</li>
<li>Tianqi (airstone42)</li>
<li>Alex Gaynor (alex)</li>
<li>Alex Hudspith (alexhudspith)</li>
<li>Alan Somers (asomers)</li>
<li>Brett (brettearle)</li>
<li>Burak Emir (burakemir)</li>
<li>Chris Denton (ChrisDenton)</li>
<li>cui fliter (cuishuang)</li>
<li>Dirkjan Ochtman (djc)</li>
<li>Dezhi Wu (dzvon)</li>
<li>Eric Swanson (ericswanson-dfinity)</li>
<li>Prikshit Gautam (gautamprikshit1)</li>
<li>hev (heiher)</li>
<li><span lang=zh>二手掉包工程师</span> (hi-rustin)</li>
<li>Kamila Borowska (KamilaBorowska)</li>
<li>klensy (klensy)</li>
<li>Jakub Beránek (Kobzol)</li>
<li>Kornel (kornelski)</li>
<li>Matt Harding (majaha)</li>
<li>Mathias Brossard (mbrossard)</li>
<li>Christian Thackston (nan60)</li>
<li>Ruohui Wang (noirgif)</li>
<li>Olivier Lemasle (olivierlemasle)</li>
<li>Chih Wang (ongchi)</li>
<li>Pavel Roskin (proski)</li>
<li>rami3l (rami3l)</li>
<li>Robert Collins (rbtcollins)</li>
<li>Sandesh  Pyakurel (Sandesh-Pyakurel)</li>
<li>Waffle Maybe (WaffleLapkin)</li>
<li>Jubilee (workingjubilee)</li>
<li>WÁNG Xuěruì (xen0n)</li>
<li>Yerkebulan Tulibergenov (yerke)</li>
<li>Renovate Bot (renovate)</li>
</ul>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../scripts/highlight.js"></script>
  </body>
</html>
